@@ -22,6 +22,7 @@ Ver.4.4 (in development)
 - [BUG FIX] Fix an error in "Master-Detail Style Page" Sample for PostgreSQL (version 4.3 only).
 - [BUG FIX] Fix updating data when uploading a file and specifying the 'field' key and not specifying the 'context' 
   key in the 'file-upload' key of the definition file.
+- [BUG FIX] Fix handling the 'maxrecords' key and the 'records' key of the related context.
 
 Ver.4.3 (2014/4/7)
 - The Local Context is supported. You can bind the context named "_" at any place in a page file.
